Fixed issue with formatting of the Client's Terms & Conditions.
Added the variable: clientid amongst the data passed to DIBS.
This allows the "Custom Pages" to set the logo dynamically based on the Client ID.

Moved the "Number of Products (#)" column to the left hand side on the Order Overview page to ensure that it doesn't look like it's part of the listed price.

git-svn-id: svn://svn.cellpointmobile.com/mpoint/server/trunk@54 86c063f6-31ef-4d33-b9ba-d2d3e4924f03

--- a/webroot/css/mobile.css
+++ b/webroot/css/mobile.css
@@ -104,4 +104,9 @@ div#status table tr td
 	vertical-align: middle;
 	padding-left: 0.5em;
 }
+
+div#terms
+{
+	white-space: pre;
+}
 /* ========== ID Classes End ========== */
